@@ -71,7 +71,7 @@ which modifier key is held down.}
 \section{\class{wxAcceleratorTable}}\label{wxacceleratortable}
 
 An accelerator table allows the application to specify a table of keyboard shortcuts for
-menus or other commands. On Windows, menu or button commands are supported; on GTK,
+menus or other commands. On Windows and Mac OS X, menu or button commands are supported; on GTK,
 only menu commands are supported.
 
 The object {\bf wxNullAcceleratorTable} is defined to be a table with no data, and is the
